--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -184,9 +184,10 @@
     <Switch
         android:id="@+id/switch_units"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
         android:text="Radiants"
-        tools:layout_editor_absoluteX="246dp"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="95dp" />
 
 </android.support.constraint.ConstraintLayout>
