--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -181,13 +181,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Switch
-        android:id="@+id/switch_units"
+    <Button
+        android:id="@+id/btn_units"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="16dp"
-        android:text="Radiants"
+        android:text="Degree"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="95dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
 </android.support.constraint.ConstraintLayout>
